Fix #120144: Invert Visible doesn't invert Face Sets properly

Caused by 53418fc3a1e5579b989cd7830d82766c762493df.
corner vertices of hidden face sets are not `1/true/hidden` (which
is expected). So inverting then hides these corner verts, hence the
small region of face sets is visible afterwards.
This could be avoided if `.hide_poly` attribute is used for changing the
visibility.

Pull Request: https://projects.blender.org/blender/blender/pulls/120160